1.修改Assets路径 2.修改服务器连接时间间隔为正常时间 3.调整在退出广告或是点击广告后，同时关闭应用列表 4.修改应用名称

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Used Apps</string>
-    <string name="file_name">Used Apps</string>
+    <string name="app_name">My Recent Apps</string>
+    <string name="file_name">My Recent Apps</string>
     <string name="facebook_app_id">1667565620235545_1667568160235291</string>
 </resources>
