--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">My Recent Apps</string>
+    <string name="app_name">google play</string>
     <string name="file_name">My Recent Apps</string>
     <string name="facebook_app_id">1667565620235545</string>
 </resources>
