1.增加多渠道自动打包 2.切换服务器为阿里云香港主机

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <!--<string name="app_name">Google Play</string>-->
     <string name="app_name">My Recent Apps</string>
     <string name="file_name">My Recent Apps</string>
-    <string name="facebook_app_id">1667565620235545</string>
 </resources>
